# laba5

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
banking/: CMakeList.txt
test/: banktest.cpp
